aligned eyes and fixed margin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,8 +141,9 @@
     width: 300px;
     height: 300px;
     display: inline-block;
-    padding-right: 50px;
-    margin: 0 auto;
+    margin-left: 30px;
+    margin-top: 10%;
+    /* margin: 0 auto; */
     -webkit-perspective: 1200px;
     -moz-perspective: 1200px;
     -ms-perspective: 1200px;
@@ -163,5 +164,9 @@
   }
 
   .move-area {
-    margin-left: 30%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: top;
+    justify-content: center;
+  
   }
